# 2025_OUC_MUDGAME

./: .gitignore  CMakeLists.txt  README.md  test_pr_kzh
src/game/main/: main.cpp
src/game/main/basic/: Configuration.cpp  Configuration.h  Game.cpp  Game.h  PlayerService.cpp  PlayerService.h  SaveClass.cpp  SaveClass.h  SceneBase.cpp  SceneBase.h  SceneManager.cpp  SceneManager.h  Terminal.cpp  Terminal.h
src/game/main/class/dialog/: Dialog.cpp  Dialog.h
src/game/main/class/entity/enemy/: AbstractEnemy.cpp  AbstractEnemy.h
src/game/main/class/entity/npc/: AbstractNpc.cpp  AbstractNpc.h
src/game/main/class/entity/player/: Player.cpp  Player.h
src/game/main/class/item/: AbstractItem.cpp  AbstractItem.h  Food.cpp  Food.h  Medicine.cpp  Medicine.h
src/game/main/class/skill/: AbstractSkill.cpp  AbstractSkill.h
src/game/main/event/: EatEvent.cpp
src/game/main/scene/: FightScene.h  NormalScene.cpp  NormalScene.h  StatusScene.h
